--- a/LKWSpringerApp.Data/LKWSpringerApp.Data.csproj
+++ b/LKWSpringerApp.Data/LKWSpringerApp.Data.csproj
@@ -7,11 +7,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.10">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\LKWSpringerApp.Common\LKWSpringerApp.Common.csproj" />
+    <ProjectReference Include="..\LKWSpringerApp.Data.Models\LKWSpringerApp.Data.Models.csproj" />
   </ItemGroup>
 
 </Project>
