--- a/LKWSpringerApp.Web/appsettings.json
+++ b/LKWSpringerApp.Web/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": ""
+    "DefaultConnection": "",
+    "LkwSpringerDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=LKWSpringerApp.Web;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
