--- a/LKWSpringerApp.Data/LKWSpringerApp.Data.csproj
+++ b/LKWSpringerApp.Data/LKWSpringerApp.Data.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.10">
@@ -18,6 +19,10 @@
   <ItemGroup>
     <ProjectReference Include="..\LKWSpringerApp.Common\LKWSpringerApp.Common.csproj" />
     <ProjectReference Include="..\LKWSpringerApp.Data.Models\LKWSpringerApp.Data.Models.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Migrations\" />
   </ItemGroup>
 
 </Project>
