--- a/LKWSpringerApp.Web.ViewModels/LKWSpringerApp.Web.ViewModels.csproj
+++ b/LKWSpringerApp.Web.ViewModels/LKWSpringerApp.Web.ViewModels.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.ViewFeatures" Version="2.1.3" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\LKWSpringerApp.Common\LKWSpringerApp.Common.csproj" />
     <ProjectReference Include="..\LKWSpringerApp.Data.Models\LKWSpringerApp.Data.Models.csproj" />
     <ProjectReference Include="..\LKWSpringerApp.Services.Mapping\LKWSpringerApp.Services.Mapping.csproj" />
