Finishing the TourContoller.Adding Edit and Delete actions.

--- a/LKWSpringerApp.Web/LKWSpringerApp.Web.csproj
+++ b/LKWSpringerApp.Web/LKWSpringerApp.Web.csproj
@@ -36,7 +36,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <_ContentIncludedByDefault Remove="Views\Tour\Edit.cshtml" />
     <_ContentIncludedByDefault Remove="Views\Tour\Index.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <UpToDateCheckInput Remove="Views\Tour\Edit.cshtml" />
   </ItemGroup>
 
 </Project>
