Adding TourService,ClientImageService and ClientImageView update

--- a/LKWSpringerApp.Web/LKWSpringerApp.Web.csproj
+++ b/LKWSpringerApp.Web/LKWSpringerApp.Web.csproj
@@ -37,6 +37,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <_ContentIncludedByDefault Remove="Views\ClientImage\Details.cshtml" />
     <_ContentIncludedByDefault Remove="Views\Client\Add.cshtml" />
     <_ContentIncludedByDefault Remove="Views\Client\Details.cshtml" />
     <_ContentIncludedByDefault Remove="Views\Tour\Edit.cshtml" />
@@ -60,6 +61,10 @@
     <Folder Include="wwwroot\images\clients\kempten\" />
     <Folder Include="wwwroot\images\clients\memmingen\" />
     <Folder Include="wwwroot\images\clients\wangen\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <UpToDateCheckInput Remove="Views\ClientImage\Details.cshtml" />
   </ItemGroup>
 
 </Project>
