Adding pagination functionallity and updating the IdentityUserRoles

--- a/LKWSpringerApp.Web.Infrastructure/LKWSpringerApp.Web.Infrastructure.csproj
+++ b/LKWSpringerApp.Web.Infrastructure/LKWSpringerApp.Web.Infrastructure.csproj
@@ -15,4 +15,8 @@
     <ProjectReference Include="..\LKWSpringerApp.Data\LKWSpringerApp.Data.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="NewFolder\" />
+  </ItemGroup>
+
 </Project>
