Updating ErrorMessages,SuccessMessages and fixing ClientImage Video code

--- a/LKWSpringerApp.Web/LKWSpringerApp.Web.csproj
+++ b/LKWSpringerApp.Web/LKWSpringerApp.Web.csproj
@@ -60,4 +60,8 @@
     <UpToDateCheckInput Remove="Views\ClientImage\Details.cshtml" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\media\clients\" />
+  </ItemGroup>
+
 </Project>
