Creating unit tests for MediaService.Deleting ApplicationUserDriver from the App.Creating Admin area.

--- a/LKWSpringerApp.Web/LKWSpringerApp.Web.csproj
+++ b/LKWSpringerApp.Web/LKWSpringerApp.Web.csproj
@@ -60,4 +60,8 @@
     <UpToDateCheckInput Remove="Views\Media\Details.cshtml" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Areas\Admin\Views\Shared\" />
+  </ItemGroup>
+
 </Project>
